small fix - letter size/readability with grid

--- a/css/styles.css
+++ b/css/styles.css
@@ -76,10 +76,10 @@ body {
 
 .navon-display {
     display: grid;
-    grid-template-columns: repeat(11, 1fr);
-    gap: 1px;
-    width: 440px;
-    height: 440px;
+    grid-template-columns: repeat(10, 1fr);
+    gap: 0px;
+    width: 330px;
+    height: 330px;
     margin: 2rem auto;
     font-family: monospace;
     background-color: #fff;
@@ -92,12 +92,14 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 24px;
+    font-size: 20px;
     font-weight: 500;
-    height: 40px;
-    width: 40px;
+    height: 25px;
+    width: 25px;
     color: #333;
     font-weight: bold;
+    line-height: 1;
+    padding: 0;
 }
 
 .target-info {
